change bg colors

--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@
 }
 
 :root{
-    --bg-color: #191f36;
-    --snd-bg-color: #262B40;
-    --text-color: #fff;
+    --bg-color: #eeeff5;
+    --snd-bg-color: #d7ddf2;
+    --text-color: #000000;
     --main-color: #59B2F4;
 }
 
