--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@
 }
 
 :root{
-    --bg-color: #eeeff5;
-    --snd-bg-color: #d7ddf2;
-    --text-color: #000000;
+    --bg-color: #191f36;
+    --snd-bg-color: #262B40;
+    --text-color: #fff;
     --main-color: #59B2F4;
 }
 
